# robotagent

./: .env.example  LICENSE  README.md  pyproject.toml
robotagent/agents/: __init__.py  robot_agent.py
robotagent/agents/subagent/: __init__.py  common.py  execution_agent.py  intent_agent.py  perception_agent.py
robotagent/configs/: __init__.py  app.example.yaml  example.env  settings.py
robotagent/models/: __init__.py  chat_model.py  embedding_model.py
robotagent/prompts/: __init__.py  langfuse_prompt_manager.py  loader.py  prompt_index.yaml
robotagent/prompts/control/: prompt.md
robotagent/prompts/deepagent/: prompt.md
robotagent/prompts/execution/: prompt.md
robotagent/prompts/intent/: prompt.md
robotagent/prompts/perception/: prompt.md
robotagent/rag/: __init__.py  document_loader.py  document_splitter.py  text_splitter.py
robotagent/scripts/: langfuse_prompts.py
robotagent/skills/control/: SKILL.md
robotagent/skills/control/agents/: openai.yaml
robotagent/skills/deepagent/: SKILL.md
robotagent/skills/deepagent/agents/: openai.yaml
robotagent/skills/execution/: SKILL.md
robotagent/skills/execution/agents/: openai.yaml
robotagent/skills/intent/: SKILL.md
robotagent/skills/intent/agents/: openai.yaml
robotagent/skills/perception/: SKILL.md
robotagent/skills/perception/agents/: openai.yaml
robotagent/storage/: vector_store.py
robotagent/utils/: __init__.py  env.py
