[project]
name = "robotagent"
version = "0.1.0"
description = "Robot Agent"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "langgraph>=1.0.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
