[project]
name = "robotagent"
version = "0.1.0"
description = "Robot Agent"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.11",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "langfuse>=3.14.1",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.2.1",
    "ruff>=0.14.14",
    "tavily-python>=0.7.21",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
